gl51-master/src/test/deca/codegen/valid/something_after_return.deca
// Description :
//    Tests commandes après un return
//
// Résultat :"42"
//
//
// Historique :
//    créé le 01/01/2024


class A{
	int method(){
		int a = 42;
		return a;
		print("I am printing after a return");
	}
}

{
	A a = new A();
	println(a.method());
}